<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/rd_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rdb_start"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/lbl_select_from_start" >
            </RadioButton>

            <RadioButton
                android:id="@+id/rdb_end"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/lbl_select_from_end" >
            </RadioButton>
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:focusable="true"  
            android:focusableInTouchMode="true" >  

            <EditText
                android:id="@+id/edt_start"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:digits="1234567890" >
            </EditText>

            <EditText
                android:id="@+id/edt_end"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:digits="1234567890" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_OK"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:text="@string/lbl_btnOk" >
        </Button>

        <Button
            android:id="@+id/btn_Cancel"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:text="@string/lbl_btnCancel" >
        </Button>
    </LinearLayout>

</LinearLayout>