<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TabHost
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/lyt_picture"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_image"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/no_content" />

                    <ImageView
                        android:id="@+id/imgv_image"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:contentDescription="@string/wanted_pic"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_video"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_video"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/no_content" />

                    <VideoView
                        android:id="@+id/vdv_video"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_server"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ListView
                        android:id="@+id/ltv_server"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_file"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ListView
                        android:id="@+id/ltv_files"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <LinearLayout
        android:id="@+id/toolBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8333"
        android:gravity="left"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/select_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/select_all" />

        <Button
            android:id="@+id/select_someone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/select_someone" />

    </LinearLayout>
    
</LinearLayout>